<?xml version="1.0"?>
<package>
  <name>robowebtools</name>
  <version>0.0.0</version>
  <description>The robowebtools package</description>

  <maintainer email="gianmiguel98@yahoo.com">Gian</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/MiG98789/roslibjs-testing</url>

  <author email="gianmiguel98@yahoo.com">Gian</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>